added parameters to example modules

--- a/templates/ws-cms-ext-calendar.html
+++ b/templates/ws-cms-ext-calendar.html
@@ -1,1 +1,5 @@
-<div ng-controller="cmsCalendar">Calendar App</div>
+<div ng-controller="cmsCalendar">
+	Calendar App
+	<div> title: {{title}}</div>
+	<div> displayTemplate: {{displayTemplate}}</div>
+</div>
