--- a/templates/ws-cms-ext-feed.html
+++ b/templates/ws-cms-ext-feed.html
@@ -1,1 +1,6 @@
-<div ng-controller="cmsFeed">Feed Viewer</div>
+<div ng-controller="cmsFeed"> 
+	Feed Viewer
+	<div> id: {{id}}</div>
+	<div> maxResults: {{maximumResults}}</div>
+	<div> displayTemplate: {{displayTemplate}}</div>
+</div>
