--- a/templates/ws-cms-ext-group.html
+++ b/templates/ws-cms-ext-group.html
@@ -1,1 +1,9 @@
-<div ng-controller="cmsGroupViewer">Feed Group Viewer</div>
+<div ng-controller="cmsGroupViewer">
+	Feed Group Viewer
+	<div> id: {{id}}</div>
+	<div> maxResults: {{maximumResults}}</div>
+	<div> showFeatured: {{showFeatured}}</div>
+	<div> includeSiteId: {{includeSiteId}}</div>
+	<div> featuredDisplayTemplate: {{featuredDisplayTemplate}}</div>
+	<div> feedDisplayTemplate: {{feedDisplayTemplate}}</div>
+</div>
