--- a/templates/ws-cms-ext-menu.html
+++ b/templates/ws-cms-ext-menu.html
@@ -1,1 +1,5 @@
-<div ng-controller="cmsMenu">Simple Menu</div>
+<div ng-controller="cmsMenu">
+	Simple Menu
+	<div> id: {{id}}</div>
+	<div> displayTemplate: {{displayTemplate}}</div>
+</div>
