--- a/templates/ws-cms-ext-calendar.html
+++ b/templates/ws-cms-ext-calendar.html
@@ -1,4 +1,4 @@
-<div ng-controller="cmsCalendar">
+<div>
 	Calendar App
 	<div> title: {{title}}</div>
 	<div> displayTemplate: {{displayTemplate}}</div>
