--- a/templates/ws-cms-ext-group.html
+++ b/templates/ws-cms-ext-group.html
@@ -1,4 +1,4 @@
-<div ng-controller="cmsGroupViewer">
+<div>
 	Feed Group Viewer
 	<div> id: {{id}}</div>
 	<div> maxResults: {{maximumResults}}</div>
