fixed some errors

--- a/templates/ws-cms-ext-calendar.html
+++ b/templates/ws-cms-ext-calendar.html
@@ -1,5 +1,5 @@
 <div>
 	Calendar App
-	<div> title: {{title}}</div>
-	<div> displayTemplate: {{displayTemplate}}</div>
+	<div> title: {{calTitle}}</div>
+	<div> displayTemplate: {{calDisplayTemplate}}</div>
 </div>
