--- a/templates/ws-cms-ext-feed.html
+++ b/templates/ws-cms-ext-feed.html
@@ -1,6 +1,6 @@
 <div> 
 	Feed Viewer
-	<div> id: {{id}}</div>
-	<div> maxResults: {{maximumResults}}</div>
-	<div> displayTemplate: {{displayTemplate}}</div>
+	<div> id: {{feedId}}</div>
+	<div> maxResults: {{feedMaximumResults}}</div>
+	<div> displayTemplate: {{feedDisplayTemplate}}</div>
 </div>
