--- a/templates/ws-cms-ext-group.html
+++ b/templates/ws-cms-ext-group.html
@@ -1,9 +1,9 @@
 <div>
 	Feed Group Viewer
-	<div> id: {{id}}</div>
-	<div> maxResults: {{maximumResults}}</div>
-	<div> showFeatured: {{showFeatured}}</div>
-	<div> includeSiteId: {{includeSiteId}}</div>
-	<div> featuredDisplayTemplate: {{featuredDisplayTemplate}}</div>
-	<div> feedDisplayTemplate: {{feedDisplayTemplate}}</div>
+	<div> id: {{groupId}}</div>
+	<div> maxResults: {{groupMaximumResults}}</div>
+	<div> showFeatured: {{groupShowFeatured}}</div>
+	<div> includeSiteId: {{groupIncludeSiteId}}</div>
+	<div> featuredDisplayTemplate: {{groupFeaturedDisplayTemplate}}</div>
+	<div> feedDisplayTemplate: {{groupFeedDisplayTemplate}}</div>
 </div>
