--- a/templates/ws-cms-ext-menu.html
+++ b/templates/ws-cms-ext-menu.html
@@ -1,5 +1,5 @@
 <div>
 	Simple Menu
-	<div> id: {{id}}</div>
-	<div> displayTemplate: {{displayTemplate}}</div>
+	<div> id: {{menuId}}</div>
+	<div> displayTemplate: {{menuDisplayTemplate}}</div>
 </div>
