Group Viewer can read in JSON data from attribute.

--- a/templates/ws-cms-ext-group.html
+++ b/templates/ws-cms-ext-group.html
@@ -4,10 +4,10 @@
 	<ui>
 		<li>id: <i>{{groupId}}</i></li>
 		<li>maxResults: <i>{{groupMaximumResults}}</i></li>
-		<li>displayTemplate: <i>{{groupDisplayTemplate}}</i></li>
 		<li>showFeatured: <i>{{groupShowFeatured}}</i></li>
 		<li>includeSiteId: <i>{{groupIncludeSiteId}}</i></li>
 		<li>featuredDisplayTemplate: <i>{{groupFeaturedDisplayTemplate}}</i></li>
 		<li>feedDisplayTemplate: <i>{{groupFeedDisplayTemplate}}</i></li>
+		<li>feedGroups: <i>{{groupFilters}}</i></li>
 	</ui>
 </div>
