Site-level implementation

--- a/templates/ws-cms-ext-calendar.html
+++ b/templates/ws-cms-ext-calendar.html
@@ -1,6 +1,5 @@
 <div> 
-	<center><h3>Calendar</h3></center>
-	<hr>
+	<center>Calendar</center>
 	<ui>
 		<li>title: <i>{{calTitle}}</i></li>
 		<li>displayTemplate: <i>{{calDisplayTemplate}}</i></li>
