--- a/templates/ws-cms-ext-feed.html
+++ b/templates/ws-cms-ext-feed.html
@@ -1,6 +1,5 @@
 <div> 
-	<center><h3>Feed Viewer</h3></center>
-	<hr>
+	<center>Feed Viewer</center>
 	<ui>
 		<li>id: <i>{{feedId}}</i></li>
 		<li>maxResults: <i>{{feedMaximumResults}}</i></li>
