--- a/templates/ws-cms-ext-group.html
+++ b/templates/ws-cms-ext-group.html
@@ -1,6 +1,5 @@
 <div> 
-	<center><h3>Feed Group Viewer</h3></center>
-	<hr>
+	<center>Feed Group Viewer</center>
 	<ui>
 		<li>id: <i>{{groupId}}</i></li>
 		<li>maxResults: <i>{{groupMaximumResults}}</i></li>
