--- a/templates/ws-cms-ext-menu.html
+++ b/templates/ws-cms-ext-menu.html
@@ -1,8 +1,15 @@
 <div>
-	<center><h3>Simple Menu</h3></center>
-	<hr>
+	<center>Simple Menu</center>
 	<ui>
 		<li>id: <i>{{menuId}}</i></li>
-		<li>displayTemplate: <i>{{menuDisplayTemplate}}</i></li>
+		<li>title: <i>{{menuTitle}}</i></li>
+		<li>logo: <i>{{menuLogo}}</i></li>
+		<li>search: <i>{{menuSearch}}</i></li>
+		<li>content: <i>{{menuContent}}</i></li>
+		<li>feedLayout: <i>{{menuFeedLayout}}</i></li>
+		<li>feedKey: <i>{{menuFeedKey}}</i></li>
+		<li>feedPagination: <i>{{menuFeedPagination}}</i></li>
+		<li>feedLinksPerPage: <i>{{menuFeedLinksPerPage}}</i></li>
+		<li>compact: <i>{{menuCompact}}</i></li>
 	</ui>
 </div>
