--- a/templates/ws-cms-ext-quicklinks.html
+++ b/templates/ws-cms-ext-quicklinks.html
@@ -1,6 +1,5 @@
 <div>
-	<center><h3>Quicklinks</h3></center>
-	<hr>
+	<center>Quicklinks</center>
 	<ui>
 		<li>id: <i>{{quickId}}</i></li>
 		<li>links: <i>{{quickLinks}}</i></li>
